<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Funtouch</string>
	<string name="noPaperPost">无纸动态宣传海报标签</string>
	<string name="wifi">一键开启Wifi标签</string>
	<string name="personalInfo">个人信息标签</string>
	<string name="meetingSilence">开会一键静音并签到标签</string>
	<string name="newBookInfo">图书馆新书信息标签</string>
	<string name="move">迁移信息标签</string>
	<string name="validateWord">验证码:</string>
	<string name="getAward">领奖</string>
	<string name="confirm">确定</string>
	<string name="ToGetAward">你还可以:</string>
	<string name="AppInduction">
	\t\t\tNFC标签的孪生兄弟，解放人类双手的美好APP。\n
	\t\t\t举办活动时候拥有了他，相当于您同时拥有了集合专属活动公众号，参与者信息录入员，
	现场签到员，现场投票统计员，获奖信息验证员于一身的全能小助手，
	让您举办活动时的幸福感倍增。\n
	\t\t\t日常生活拥有了他，您相当于同时拥有了集合电子名片，电子验证码，
	电子签到于一身的电子小秘书，让您逼格爆棚。
	</string>
	<string name="whatisthis"><b>What’s this?</b></string>
	<string name="howtobuy"><b>How to buy?</b></string>
	<string name="seeact_header"><b>先选定组织再查看活动吧!</b></string>
	
    <string name="nfc_settings">NFC Setting</string>
    <string name="wifi_settings">WiFi Setting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    
    <string name="save_to_tag">Save to Tag</string>
    <string name="SSID">WiFi SSID: </string>
    <string name="Security">加密类型: </string>
    <string name="key">WiFi 密钥： </string>
    
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="inquire">询问</string>
    <string name="nfc_notice2">没发现NFC设备，请确认您的手机支持NFC功能!</string>
    <string name="nfc_notice3">请确认NFC功能是否开启!</string>
    <string name="dialog_notice">NfcWiFiAssistant ©xiaob</string>
    
    <string name="write_ndef_tag_chosse_tips">请选择待写入TAG类型：</string>
    <string name="write_ndef_tag_save_to_tag">储存填写内容</string>
    <string name="write_ndef_tag_write_to_tag">写入到标签</string>
    <string name="write_ndef_tag_google_com">baidu.com</string>
    <string name="write_ndef_tag_exit">退出</string>
    <string name="write_ndef_tag_note">note</string>

</resources>
